# zeromodel

./: .codex_pr_body_prospective.md  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLEANUP_SENTINEL.md  NOTE_TO_REMOVE.md  README.md  REBUILD.md  TEMP_CLEAN_TREE_MARKER.md  main-to-current.md  package-boundaries.toml  pyproject.toml  quality-baseline.toml  requirements-dev.txt  results.txt  setup.py  zeromodel.yaml
.github/: pr71-patch.part00  pr71-patch.part01  pr71-patch.part02
docs/: claims-audit.md  release.md  video-action-set-final-claim-rules.md  video-action-set-final-decision-rule-options.md  video-action-set-final-evaluation-protocol-review.md  video-action-set-final-evaluation-protocol-template.json  video-action-set-finalization-authority.md  video-action-set-finalization-integration-validation.md  video-action-set-stage8-runbook.md
examples/: analyze_visual_address_report.py  arcade_png_interventions.py  arcade_png_representation_benchmark.py  arcade_png_representation_comparison.py  arcade_png_representation_runner.py  arcade_shooter_policy.py  arcade_visual_action_equivalence_audit.py  arcade_visual_action_set_reachability_benchmark.py  arcade_visual_address_benchmark.py  arcade_visual_local_baseline_postanalysis.py  arcade_visual_local_baseline_showdown.py  arcade_visual_local_evidence_benchmark.py  arcade_visual_registered_calibration_v2.py  arcade_visual_sign_reader.py  arcade_visual_system_b_adjudication.py  arcade_visual_video_baseline.py  arcade_visual_video_discriminative_evidence_benchmark.py  arcade_visual_video_local_correlation_benchmark.py  basic_demo.py  bertin_pattern_detection.py  criticality_verification.py  end_to_end_learning_trace.py  end_to_end_training_progress.py  iris_example.py  learning_trace_demo.py  local_gemma4_zero_arcade_test.py  local_model_zero_arcade_test.py  lua_edge_policy.py  policy_lookup_benchmark.py  provider_evaluation_report_adapter.py  render_signs_demo.py  research_decision_manifold.py  research_hallucination_energy_vpm.py  research_multiview_dense_artifact.py  research_spatial_optimizer.py  test_gemma_vision.py  training_progress_demo.py  training_tracker_adapters_demo.py  writer_report_adapters_demo.py
integration_tests/: test_package_integration_smoke.py
notebooks/: Qwen_python_20250806_dtsey0inl.py  cookbook.ipynb  cookbook.py  defects.ipynb  demo_ai.ipynb  heirachical_vpm.ipynb  heirachical_vpm.py  hierarchical_vpm_demo.ipynb  iris.ipynb  iris.py  notebook.ipynb  panels.ipynb  provenance.ipynb  provenance.py  simple_demo.ipynb  validation.ipynb  vit.ipynb  vpm_report.json  world.ipynb  world.py  xor.ipynb  xor.py
scripts/: RELEASE.md  _validate_release_candidate_impl.py  add_imports.py  analyze_package_inventory.py  benchmark.ps1  bunp_version.py  check_architecture.py  check_package_boundaries.py  check_quality.py  check_visual_evidence_impact.py  code_dir.ps1  code_quality_report.py  create-release.ps1  fast_suite_reporter.py  generate-arcade-validation-record.ps1  observe-video-finalization-integration.ps1  publish-pypi.ps1  regenerate_visual_evidence.ps1  repair_phase_one_recovery.ps1  run-video-finalization-integration.ps1  run_fast_tests.py  tree_view.py  validate_release_candidate.py  video-final-execute-once.ps1  video-final-observe.ps1  video-final-preflight.ps1  video-final-reconstruct.ps1  zip_project.py
site/: README.md  app.js  index.html  styles.css
stage3-v2-freeze-yncrtk46/: development-manifest.json  evaluation-sample.json  generator-identity.json  prototype-collision-atlas.json  prototype-manifest.json
tests/: conftest.py  test_analyze_package_inventory.py  test_core.py  (+215 more)
(+802 files in other folders)
