[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeromodel"
version = "1.0.11"
description = "Deterministic Visual Policy Map artifacts and consumers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ernan Hughes", email = "ernanhughes@gmail.com"}]
keywords = ["visual-policy-map", "vpm", "explainability", "edge-ai", "provenance"]
dependencies = [
    "numpy>=1.23",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest>=7", "build>=1.2", "twine>=5"]
release = ["build>=1.2", "twine>=5"]

[project.urls]
Homepage = "https://github.com/ernanhughes/zeromodel"
Repository = "https://github.com/ernanhughes/zeromodel"
Documentation = "https://ernanhughes.github.io/zeromodel/"

[tool.setuptools.packages.find]
include = ["zeromodel*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]
